--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>blogwwwidpwa</title>
+  <title>Blog WWWID PWA</title>
+  <meta name="description" content="Aplikasi yang berisi umpan berita dari situs Medium WWWID Indonesia." />
   <link rel="icon" type="image/png" sizes="32x32" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/favicon-32x32.png">
   <link rel="icon" type="image/png" sizes="16x16" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/favicon-16x16.png">
   <!--[if IE]><link rel="shortcut icon" href="/static/img/icons/favicon.ico"><![endif]-->
   <!-- Add to home screen for Android and modern mobile browsers -->
   <link rel="manifest" href="<%= htmlWebpackPlugin.files.publicPath %>static/manifest.json">
-  <meta name="theme-color" content="#4DBA87">
+  <meta name="theme-color" content="#03a9f4">
 
   <!-- Add to home screen for Safari on iOS -->
   <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="blogwwwidpwa">
   <link rel="apple-touch-icon" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/apple-touch-icon-152x152.png">
-  <link rel="mask-icon" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/safari-pinned-tab.svg" color="#4DBA87">
+  <link rel="mask-icon" href="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/safari-pinned-tab.svg" color="#03a9f4">
   <!-- Add to home screen for Windows -->
   <meta name="msapplication-TileImage" content="<%= htmlWebpackPlugin.files.publicPath %>static/img/icons/msapplication-icon-144x144.png">
   <meta name="msapplication-TileColor" content="#000000">
@@ -28,14 +29,14 @@
     <link rel="<%= chunk.initial?'preload':'prefetch' %>" href="<%= htmlWebpackPlugin.files.publicPath + file %>" as="<%= file.match(/\.css$/)?'style':'script' %>">
     <% }}} %>
 
-      <!-- GUNAKAN CDN JIKA AKAN MEMBUAT MODE PRODUKSI -->
       <link rel="shortcut icon" href="./static/favicon.ico" type="image/x-icon">
+      <!-- GUNAKAN CDN JIKA AKAN MEMBUAT MODE PRODUKSI -->
+      <link rel="preload" href="https://cdn.jsdelivr.net/npm/animate.css@3.6.1/animate.min.css" as="style" crossorigin="anonymous"
+        onload="this.rel='stylesheet'">
       <link rel="preload" href="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.css" as="style" crossorigin="anonymous"
         onload="this.rel='stylesheet'">
       <script src="https://cdn.jsdelivr.net/npm/jquery@3.3.1/dist/jquery.min.js" defer></script>
       <script src="https://cdn.jsdelivr.net/npm/semantic-ui@2.3.1/dist/semantic.min.js" defer></script>
-      <!-- <script src="https://cdn.jsdelivr.net/npm/axios@0.18.0/dist/axios.min.js" defer></script>
-  <script src="https://cdn.jsdelivr.net/npm/moment@2.22.1/min/moment-with-locales.min.js" defer></script> -->
 </head>
 
 <body>
